--- a/index.html
+++ b/index.html
@@ -1104,7 +1104,7 @@
         <h1>Content that grows your <em>natural</em> brand</h1>
         <p class="hero-sub">Strategic blogs, emails, and social content for natural living brands — delivered consistently, powered by AI, guided by a human who gets your world.</p>
         <div class="hero-actions">
-          <a href="#contact" class="btn-primary">
+          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-primary">
             Book a Free Discovery Call
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"/></svg>
           </a>
@@ -1246,7 +1246,7 @@
             <li>1 email newsletter</li>
             <li>Monthly strategy call (30 min)</li>
           </ul>
-          <a href="#contact" class="btn-price">Get Started</a>
+          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-price">Get Started</a>
         </div>
         <!-- GROWTH -->
         <div class="price-card featured reveal">
@@ -1265,7 +1265,7 @@
             <li>Quarterly content audit</li>
             <li>Priority support</li>
           </ul>
-          <a href="#contact" class="btn-price filled">Get Started</a>
+          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-price filled">Get Started</a>
         </div>
         <!-- CANOPY -->
         <div class="price-card reveal">
@@ -1282,7 +1282,7 @@
             <li>Weekly strategy calls</li>
             <li>Dedicated content dashboard</li>
           </ul>
-          <a href="#contact" class="btn-price">Get Started</a>
+          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-price">Get Started</a>
         </div>
       </div>
     </div>
@@ -1431,7 +1431,7 @@
       <div class="section-label">Let's talk</div>
       <h2>Ready to grow your brand with content that actually connects?</h2>
       <p>Book a free 15-minute discovery call. No pitch, no pressure — just a conversation about your brand and how consistent content could change everything.</p>
-      <a href="#" class="btn-cta-large">
+      <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-cta-large">
         Book Your Free Discovery Call
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"/></svg>
       </a>
