--- a/index.html
+++ b/index.html
@@ -3,8 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Edge Studio | AI-Powered Content Marketing for Natural Living Brands</title>
-  <meta name="description" content="Strategic blogs, emails, and social content for natural living brands. Delivered consistently, powered by AI, guided by a human who gets your world.">
+  <title>The Edge Studio | Content Marketing for Natural Health & Wellness Brands Australia</title>
+  <meta name="description" content="AI-powered content marketing for Australian natural health, herbal, and organic skincare brands. SEO blogs, email newsletters, social content & strategy. From $597/month.">
+  <meta name="keywords" content="content marketing natural brands, SEO blog writing wellness brands, natural health content agency Australia, herbal brand marketing, organic skincare content strategy">
+  <link rel="canonical" href="https://theedgestudio.app/">
+  <meta property="og:title" content="The Edge Studio | Content Marketing for Natural Living Brands">
+  <meta property="og:description" content="Strategic blogs, emails, and social content for natural living brands. Delivered consistently, powered by AI, guided by a practitioner who lives this world.">
+  <meta property="og:url" content="https://theedgestudio.app/">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="The Edge Studio">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="The Edge Studio | Content Marketing for Natural Living Brands">
+  <meta name="twitter:description" content="Strategic blogs, emails, and social content for natural living brands. From $597/month.">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "The Edge Studio",
+    "description": "AI-powered content marketing agency specialising in Australian natural health, herbal, and organic skincare brands.",
+    "url": "https://theedgestudio.app",
+    "priceRange": "$597-$1497/month",
+    "areaServed": "Australia",
+    "serviceType": ["Content Marketing", "SEO Blog Writing", "Email Marketing", "Social Media Content"],
+    "founder": {
+      "@type": "Person",
+      "name": "Marina",
+      "jobTitle": "Content Strategist & Herbalist"
+    }
+  }
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=DM+Sans:ital,opsz,wght@0,9..40,300..700;1,9..40,300..700&display=swap" rel="stylesheet">
@@ -1088,6 +1115,7 @@
         <li><a href="#pricing">Packages</a></li>
         <li><a href="#how">Process</a></li>
         <li><a href="#faq">FAQ</a></li>
+        <li><a href="blog-post-1.html">Blog</a></li>
         <li><a href="#contact" class="nav-cta">Book a Call</a></li>
       </ul>
       <button class="mobile-toggle" id="mobileToggle" aria-label="Menu">
@@ -1435,7 +1463,7 @@
         Book Your Free Discovery Call
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"/></svg>
       </a>
-      <div class="contact-email">Or email me at <a href="mailto:hello@theedgestudio.app">hello@theedgestudio.app</a></div>
+      <div class="contact-email">Or email me at <a href="/cdn-cgi/l/email-protection#bcd4d9d0d0d3fcc8d4d9d9d8dbd9cfc8c9d8d5d392ddcccc"><span class="__cf_email__" data-cfemail="d4bcb1b8b8bb94a0bcb1b1b0b3b1a7a0a1b0bdbbfab5a4a4">[email&#160;protected]</span></a></div>
       <div class="contact-note">No contracts. No commitment. Just a conversation.</div>
     </div>
   </section>
@@ -1447,12 +1475,13 @@
       <ul class="footer-links">
         <li><a href="#hero">Home</a></li>
         <li><a href="#pricing">Packages</a></li>
+        <li><a href="blog-post-1.html">Blog</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </footer>
 
-  <script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     // Sticky nav on scroll
     const nav = document.getElementById('nav');
     window.addEventListener('scroll', () => {
@@ -1490,14 +1519,4 @@
         const isActive = item.classList.contains('active');
 
         // Close all
-        document.querySelectorAll('.faq-item').forEach(i => i.classList.remove('active'));
-
-        // Open clicked (if it wasn't already open)
-        if (!isActive) {
-          item.classList.add('active');
-        }
-      });
-    });
-  </script>
-</body>
-</html>
+        docume
