--- a/index.html
+++ b/index.html
@@ -3,35 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Edge Studio | Content Marketing for Natural Health & Wellness Brands Australia</title>
-  <meta name="description" content="AI-powered content marketing for Australian natural health, herbal, and organic skincare brands. SEO blogs, email newsletters, social content & strategy. From $597/month.">
-  <meta name="keywords" content="content marketing natural brands, SEO blog writing wellness brands, natural health content agency Australia, herbal brand marketing, organic skincare content strategy">
-  <link rel="canonical" href="https://theedgestudio.app/">
-  <meta property="og:title" content="The Edge Studio | Content Marketing for Natural Living Brands">
-  <meta property="og:description" content="Strategic blogs, emails, and social content for natural living brands. Delivered consistently, powered by AI, guided by a practitioner who lives this world.">
-  <meta property="og:url" content="https://theedgestudio.app/">
-  <meta property="og:type" content="website">
-  <meta property="og:site_name" content="The Edge Studio">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The Edge Studio | Content Marketing for Natural Living Brands">
-  <meta name="twitter:description" content="Strategic blogs, emails, and social content for natural living brands. From $597/month.">
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "ProfessionalService",
-    "name": "The Edge Studio",
-    "description": "AI-powered content marketing agency specialising in Australian natural health, herbal, and organic skincare brands.",
-    "url": "https://theedgestudio.app",
-    "priceRange": "$597-$1497/month",
-    "areaServed": "Australia",
-    "serviceType": ["Content Marketing", "SEO Blog Writing", "Email Marketing", "Social Media Content"],
-    "founder": {
-      "@type": "Person",
-      "name": "Marina",
-      "jobTitle": "Content Strategist & Herbalist"
-    }
-  }
-  </script>
+  <title>The Edge Studio — AI-Powered Content Marketing for Natural Living Brands</title>
+  <meta name="description" content="Strategic blogs, emails, and social content for natural living brands. Delivered consistently, powered by AI, guided by a human who gets your world.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=DM+Sans:ital,opsz,wght@0,9..40,300..700;1,9..40,300..700&display=swap" rel="stylesheet">
@@ -1115,7 +1088,6 @@
         <li><a href="#pricing">Packages</a></li>
         <li><a href="#how">Process</a></li>
         <li><a href="#faq">FAQ</a></li>
-        <li><a href="blog-post-1.html">Blog</a></li>
         <li><a href="#contact" class="nav-cta">Book a Call</a></li>
       </ul>
       <button class="mobile-toggle" id="mobileToggle" aria-label="Menu">
@@ -1130,9 +1102,9 @@
       <div class="hero-content">
         <div class="hero-badge">AI-Powered Content Marketing</div>
         <h1>Content that grows your <em>natural</em> brand</h1>
-        <p class="hero-sub">Strategic blogs, emails, and social content for natural living brands. Delivered consistently, powered by AI, guided by a human who gets your world.</p>
+        <p class="hero-sub">Strategic blogs, emails, and social content for natural living brands — delivered consistently, powered by AI, guided by a human who gets your world.</p>
         <div class="hero-actions">
-          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-primary">
+          <a href="#contact" class="btn-primary">
             Book a Free Discovery Call
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"/></svg>
           </a>
@@ -1216,7 +1188,7 @@
   <section class="services" id="services">
     <div class="container">
       <div class="section-label reveal">What you get</div>
-      <h2 class="section-title reveal">A complete content system, not just random posts</h2>
+      <h2 class="section-title reveal">A complete content system — not just random posts</h2>
       <p class="section-sub reveal">Every month, you get a strategic content plan plus all the written assets to execute it. You focus on your products. I handle the words.</p>
       <div class="services-grid">
         <div class="service-card reveal">
@@ -1237,7 +1209,7 @@
         <div class="service-card reveal">
           <div class="service-icon">🎬</div>
           <h3>Video Scripts</h3>
-          <p>Reel and TikTok scripts with shot lists. You bring the camera, I bring the words, hooks, and structure that get views.</p>
+          <p>Reel and TikTok scripts with shot lists. You bring the camera — I bring the words, hooks, and structure that get views.</p>
         </div>
         <div class="service-card reveal">
           <div class="service-icon">📱</div>
@@ -1258,7 +1230,7 @@
     <div class="container">
       <div class="section-label reveal">Packages</div>
       <h2 class="section-title reveal">Invest in content that actually works</h2>
-      <p class="section-sub reveal">Choose the package that fits your brand's growth stage. No contracts, cancel anytime.</p>
+      <p class="section-sub reveal">Choose the package that fits your brand's growth stage. No contracts — cancel anytime.</p>
       <div class="pricing-grid">
         <!-- SEED -->
         <div class="price-card reveal">
@@ -1274,7 +1246,7 @@
             <li>1 email newsletter</li>
             <li>Monthly strategy call (30 min)</li>
           </ul>
-          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-price">Get Started</a>
+          <a href="#contact" class="btn-price">Get Started</a>
         </div>
         <!-- GROWTH -->
         <div class="price-card featured reveal">
@@ -1293,7 +1265,7 @@
             <li>Quarterly content audit</li>
             <li>Priority support</li>
           </ul>
-          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-price filled">Get Started</a>
+          <a href="#contact" class="btn-price filled">Get Started</a>
         </div>
         <!-- CANOPY -->
         <div class="price-card reveal">
@@ -1310,7 +1282,7 @@
             <li>Weekly strategy calls</li>
             <li>Dedicated content dashboard</li>
           </ul>
-          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-price">Get Started</a>
+          <a href="#contact" class="btn-price">Get Started</a>
         </div>
       </div>
     </div>
@@ -1320,7 +1292,7 @@
   <section class="how" id="how">
     <div class="container">
       <div class="section-label reveal">Process</div>
-      <h2 class="section-title reveal">Simple as 1, 2, 3</h2>
+      <h2 class="section-title reveal">Simple as 1–2–3</h2>
       <p class="section-sub reveal">No complicated onboarding. No endless questionnaires. Just great content, delivered consistently.</p>
       <div class="steps">
         <div class="step reveal">
@@ -1375,9 +1347,9 @@
         <div class="about-content reveal">
           <div class="section-label">Why The Edge Studio</div>
           <h2 class="section-title">Strategy meets AI</h2>
-          <p style="font-family: var(--font-display); font-size: 1.25rem; color: var(--forest); line-height: 1.5; margin-bottom: 1.5rem; font-style: italic;">"I'm not learning your audience. I <span style="color: var(--terracotta);">am</span> your audience."</p>
+          <p style="font-family: var(--font-display); font-size: 1.25rem; color: var(--forest); line-height: 1.5; margin-bottom: 1.5rem; font-style: italic;">"I'm not learning your audience — I <span style="color: var(--terracotta);">am</span> your audience."</p>
           <p>I'm not a generic marketing agency that writes about SaaS one day and skincare the next. I work exclusively with natural living brands because <strong>that's the world I live in.</strong></p>
-          <p>I'm a homeschool mom who gardens, makes herbal remedies, and has lived this lifestyle for years. When I write about natural health or sustainable living, it comes from real experience, not a quick Google search.</p>
+          <p>I'm a homeschool mom who gardens, makes herbal remedies, and has lived this lifestyle for years. When I write about natural health or sustainable living, it comes from real experience — not a quick Google search.</p>
           <p>I use AI-powered workflows to produce content faster and more affordably than a traditional agency, but every piece is guided by <strong>real strategy, edited by a human, and rooted in genuine knowledge</strong> of your space. That's the edge.</p>
           <div class="about-stats">
             <div>
@@ -1410,7 +1382,7 @@
             <div class="faq-icon">+</div>
           </button>
           <div class="faq-answer">
-            <p>ChatGPT can generate text, but it can't build a content strategy, research your SEO opportunities, understand your brand voice, or ensure consistency month over month. I bring the strategy and expertise. AI helps me deliver it faster. You get agency-quality work at a fraction of the cost.</p>
+            <p>ChatGPT can generate text, but it can't build a content strategy, research your SEO opportunities, understand your brand voice, or ensure consistency month over month. I bring the strategy and expertise — AI helps me deliver it faster. You get agency-quality work at a fraction of the cost.</p>
           </div>
         </div>
         <div class="faq-item reveal">
@@ -1419,7 +1391,7 @@
             <div class="faq-icon">+</div>
           </button>
           <div class="faq-answer">
-            <p>Just 30 minutes of your time each month for our strategy call. I handle everything else. If you have brand guidelines or past content you love, that helps, but it's not required. I'll learn your voice and make it my own.</p>
+            <p>Just 30 minutes of your time each month for our strategy call. I handle everything else. If you have brand guidelines or past content you love, that helps — but it's not required. I'll learn your voice and make it my own.</p>
           </div>
         </div>
         <div class="faq-item reveal">
@@ -1428,7 +1400,7 @@
             <div class="faq-icon">+</div>
           </button>
           <div class="faq-answer">
-            <p>Every piece comes with one round of revisions included. In practice, most clients love what they get because we align on strategy upfront during our monthly call. If something isn't right, I'll fix it. No questions asked.</p>
+            <p>Every piece comes with one round of revisions included. In practice, most clients love what they get because we align on strategy upfront during our monthly call. If something isn't right, I'll fix it — no questions asked.</p>
           </div>
         </div>
         <div class="faq-item reveal">
@@ -1446,7 +1418,7 @@
             <div class="faq-icon">+</div>
           </button>
           <div class="faq-answer">
-            <p>You'll have content publishing within 2 weeks of starting. Email and social engagement improves immediately with consistency. SEO results typically take 2-3 months to compound, but once they do, they keep growing. Content marketing is a long game, but it's the game that wins.</p>
+            <p>You'll have content publishing within 2 weeks of starting. Email and social engagement improves immediately with consistency. SEO results typically take 2-3 months to compound, but once they do, they keep growing. Content marketing is a long game — but it's the game that wins.</p>
           </div>
         </div>
       </div>
@@ -1458,12 +1430,12 @@
     <div class="contact-inner">
       <div class="section-label">Let's talk</div>
       <h2>Ready to grow your brand with content that actually connects?</h2>
-      <p>Book a free 15-minute discovery call. No pitch, no pressure. Just a conversation about your brand and how consistent content could change everything.</p>
-      <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" class="btn-cta-large">
+      <p>Book a free 15-minute discovery call. No pitch, no pressure — just a conversation about your brand and how consistent content could change everything.</p>
+      <a href="#" class="btn-cta-large">
         Book Your Free Discovery Call
         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5L21 12m0 0l-7.5 7.5M21 12H3"/></svg>
       </a>
-      <div class="contact-email">Or email me at <a href="/cdn-cgi/l/email-protection#bcd4d9d0d0d3fcc8d4d9d9d8dbd9cfc8c9d8d5d392ddcccc"><span class="__cf_email__" data-cfemail="d4bcb1b8b8bb94a0bcb1b1b0b3b1a7a0a1b0bdbbfab5a4a4">[email&#160;protected]</span></a></div>
+      <div class="contact-email">Or email me at <a href="mailto:hello@theedgestudio.app">hello@theedgestudio.app</a></div>
       <div class="contact-note">No contracts. No commitment. Just a conversation.</div>
     </div>
   </section>
@@ -1475,13 +1447,12 @@
       <ul class="footer-links">
         <li><a href="#hero">Home</a></li>
         <li><a href="#pricing">Packages</a></li>
-        <li><a href="blog-post-1.html">Blog</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
   </footer>
 
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
+  <script>
     // Sticky nav on scroll
     const nav = document.getElementById('nav');
     window.addEventListener('scroll', () => {
@@ -1519,4 +1490,14 @@
         const isActive = item.classList.contains('active');
 
         // Close all
-        docume
+        document.querySelectorAll('.faq-item').forEach(i => i.classList.remove('active'));
+
+        // Open clicked (if it wasn't already open)
+        if (!isActive) {
+          item.classList.add('active');
+        }
+      });
+    });
+  </script>
+</body>
+</html>
