--- a/blog-post-1.html
+++ b/blog-post-1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Why Your Natural Health Brand Needs a Blog (Even If You Hate Writing) | The Edge Studio</title>
+  <title>Why Your Natural Health Brand Needs a Blog (Even If You Hate Writing) | Edge Studio</title>
   <meta name="description" content="If your natural health brand doesn't have a blog, you're invisible to customers searching for what you sell. Learn why blogging matters and how to start.">
   <meta name="keywords" content="natural health brand blog, wellness brand content marketing, herbal brand SEO, organic skincare blog strategy, content marketing natural products Australia">
   <link rel="canonical" href="https://theedgestudio.app/blog-post-1.html">
@@ -11,7 +11,7 @@
   <meta property="og:description" content="Your customers are Googling their problems right now. If you don't have a blog answering those questions, someone else is.">
   <meta property="og:url" content="https://theedgestudio.app/blog-post-1.html">
   <meta property="og:type" content="article">
-  <meta property="og:site_name" content="The Edge Studio">
+  <meta property="og:site_name" content="Edge Studio">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Why Your Natural Health Brand Needs a Blog">
   <meta name="twitter:description" content="Your customers are Googling their problems right now. Here's why your natural health brand needs a blog.">
@@ -22,7 +22,7 @@
     "headline": "Why Your Natural Health Brand Needs a Blog (Even If You Hate Writing)",
     "description": "A guide for natural health and wellness brands on why blog content is essential for organic search visibility and customer acquisition.",
     "author": { "@type": "Person", "name": "Marina" },
-    "publisher": { "@type": "Organization", "name": "The Edge Studio", "url": "https://theedgestudio.app" },
+    "publisher": { "@type": "Organization", "name": "Edge Studio", "url": "https://theedgestudio.app" },
     "datePublished": "2026-02-15",
     "mainEntityOfPage": "https://theedgestudio.app/blog-post-1.html"
   }
@@ -334,7 +334,7 @@
   <!-- NAVIGATION -->
   <nav class="nav" id="nav">
     <div class="nav-inner">
-      <a href="index.html" class="nav-logo">The Edge Studio</a>
+      <a href="index.html" class="nav-logo">Edge Studio</a>
       <ul class="nav-links" id="navLinks">
         <li><a href="index.html#services">Services</a></li>
         <li><a href="index.html#pricing">Packages</a></li>
@@ -443,7 +443,7 @@
 
     <p>Content marketing is a skill, just like making herbal remedies or formulating skincare. The best results come when you pair deep knowledge of a subject with strategic content creation skills. You bring the knowledge. A content partner brings the strategy.</p>
 
-    <p>At The Edge Studio, I create blog posts, emails, and social content specifically for Australian natural living brands. I am a massage practitioner, herbalist, and student of kinesiology, iridology, and womb hara bodywork. When I write for a brand in this space, I am not researching from scratch. I am writing from experience.</p>
+    <p>At Edge Studio, I create blog posts, emails, and social content specifically for Australian natural living brands. I am a massage practitioner, herbalist, and student of kinesiology, iridology, and womb hara bodywork. When I write for a brand in this space, I am not researching from scratch. I am writing from experience.</p>
 
     <p>If you have been thinking about starting a blog but never get around to it, or if you have a blog that has not been updated in months, I would love to chat.</p>
 
@@ -461,7 +461,7 @@
     <div class="blog-author">
       <div class="blog-author-avatar">M</div>
       <div class="blog-author-text">
-        <h4>Marina &mdash; The Edge Studio</h4>
+        <h4>Marina &mdash; Edge Studio</h4>
         <p>Content strategist for Australian natural living brands. Massage practitioner, herbalist, and someone who genuinely lives this world every day.</p>
       </div>
     </div>
@@ -471,7 +471,7 @@
   <!-- FOOTER -->
   <footer class="footer">
     <div class="footer-inner">
-      <p>&copy; 2026 The Edge Studio. AI-powered content marketing for natural living brands.</p>
+      <p>&copy; 2026 Edge Studio. AI-powered content marketing for natural living brands.</p>
       <ul class="footer-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="index.html#pricing">Packages</a></li>
