--- a/index.html
+++ b/index.html
@@ -656,6 +656,24 @@ textarea.ctrl{height:auto;min-height:110px;resize:vertical;line-height:1.65}
     </div>
   </div>
 </section>
+<section class="sec">
+  <div class="w">
+    <div class="svcs-hdr">
+      <div>
+        <div class="sec-eyebrow" style="margin-bottom:var(--sp3)"><span class="eyebrow">Integration</span></div>
+        <h2 class="sec-hed">Built to work with your existing systems.</h2>
+      </div>
+      <div>
+        <p class="sec-lead">
+          Edge Studio does not replace your PMS, CRM, or booking software.
+          We build automation that connects to your existing tools so they
+          talk to each other properly. Your systems stay in place — they
+          simply become more intelligent, responsive, and coordinated.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- MARQUEE -->
 <div class="mq-band" aria-hidden="true">
@@ -750,60 +768,7 @@ textarea.ctrl{height:auto;min-height:110px;resize:vertical;line-height:1.65}
 </section>
 
 <!-- SERVICES -->
-<section class="sec" id="services">
-  <div class="w">
-    <div class="svcs-hdr">
-      <div>
-        <div class="sec-eyebrow sr" style="margin-bottom:var(--sp3)"><span class="eyebrow">Common systems</span></div>
-        <h2 class="sec-hed sr d1">Less admin. Better care.<br><i>Stronger bookings.</i></h2>
-      </div>
-      <div class="svcs-hdr-r">
-        <p class="sec-lead sr d2">We design and build connected clinic systems that reduce admin, improve the patient experience, and protect revenue. We start with the highest-impact gap in your journey, then expand as needed.</p>
-      </div>
-    </div>
-    <div class="svcs-grid">
-      <div class="svc sr">
-        <div class="svc-top">
-          <div class="svc-num">01</div>
-          <div class="svc-ico">🎯</div>
-          <div class="svc-title">Enquiries that don’t go cold</div>
-          <p class="svc-body">Every enquiry gets an immediate, helpful response — even after hours. Questions are answered, the right service is suggested, and the patient is guided toward booking. No missed opportunities. No manual chasing.</p>
-          <div class="svc-best"><strong>Best for:</strong> Clinics with steady enquiries, missed calls, or website traffic that is not converting consistently.</div>
-        </div>
-        <div class="svc-foot">
-          <span class="svc-tag">Respond + Book</span>
-          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" rel="noopener" class="btn btn-ghost btn-sm arr" style="padding-right:0">Discuss this</a>
-        </div>
-      </div>
-      <div class="svc sr d1">
-        <div class="svc-top">
-          <div class="svc-num">02</div>
-          <div class="svc-ico">📋</div>
-          <div class="svc-title">Follow-up that actually happens</div>
-          <p class="svc-body">Care summaries, reminders, and rebooking prompts go out at the right time — automatically. Patients feel supported between visits, and your team is not stuck doing manual follow-up. Retention improves because nothing slips through.</p>
-          <div class="svc-best"><strong>Best for:</strong> Clinics where patients book once but do not consistently return, or where follow-up is inconsistent because admin is overloaded.</div>
-        </div>
-        <div class="svc-foot">
-          <span class="svc-tag">Support + Rebook</span>
-          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" rel="noopener" class="btn btn-ghost btn-sm arr" style="padding-right:0">Discuss this</a>
-        </div>
-      </div>
-      <div class="svc sr d2">
-        <div class="svc-top">
-          <div class="svc-num">03</div>
-          <div class="svc-ico">⚙️</div>
-          <div class="svc-title">Admin that runs in the background</div>
-          <p class="svc-body">Intake, confirmations, reminders, internal handoffs, and reporting run automatically across your existing tools. Reception spends less time on repetitive admin, practitioners walk into appointments better prepared, and patients experience a smoother journey.</p>
-          <div class="svc-best"><strong>Best for:</strong> Clinics where reception is stretched, processes are inconsistent, or key tasks depend on someone remembering to do them.</div>
-        </div>
-        <div class="svc-foot">
-          <span class="svc-tag">Streamline</span>
-          <a href="https://calendly.com/hello-theedgestudio/30min" target="_blank" rel="noopener" class="btn btn-ghost btn-sm arr" style="padding-right:0">Discuss this</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
 
 <!-- CONTENT TYPES -->
 <section class="ct-strip">
@@ -892,33 +857,27 @@ textarea.ctrl{height:auto;min-height:110px;resize:vertical;line-height:1.65}
         <p class="sec-lead sr d2">You will always know what we are doing, why we are doing it, and what it means for your clinic. No surprises, no hidden complexity.</p>
       </div>
     </div>
+
     <div class="proc-steps">
       <div class="pstep sr">
         <div class="pstep-n">01</div>
         <div>
-          <div class="pstep-title">Discovery Call (Free)</div>
-          <p class="pstep-body">A focused 30-minute conversation about your clinic. How patients currently find you, how enquiries are handled, where the schedule has gaps, and what your team spends too much time on. We listen before we recommend anything. No pitch. Just a clear picture of where things stand.</p>
+          <div class="pstep-title">30-minute Mapping Call (Free)</div>
+          <p class="pstep-body">We map your current patient journey and admin load: where enquiries come from, what happens after contact, where follow-up breaks, and which tasks are consuming your team.</p>
         </div>
       </div>
       <div class="pstep sr">
         <div class="pstep-n">02</div>
         <div>
-          <div class="pstep-title">Clinic Growth Diagnostic</div>
-          <p class="pstep-body">A structured review of your patient journey from first contact to repeat visit. We map the gaps, quantify the cost of each one, and identify the single highest-impact system to build first. You receive a written recommendation before any build begins. If you go ahead, the diagnostic fee is credited toward implementation.</p>
+          <div class="pstep-title">One High-Impact Workflow</div>
+          <p class="pstep-body">We pick the single workflow that will reduce admin and improve the patient experience most quickly (for example: enquiry response, recall, intake, or cancellation filling). Clear scope. No unnecessary build.</p>
         </div>
       </div>
       <div class="pstep sr">
         <div class="pstep-n">03</div>
         <div>
-          <div class="pstep-title">Build and Integration</div>
-          <p class="pstep-body">We design the system, build it, and integrate it with your existing tools: your booking software, website, and communication platforms. You review it before it goes live. Nothing ships until it works the way it should.</p>
-        </div>
-      </div>
-      <div class="pstep sr">
-        <div class="pstep-n">04</div>
-        <div>
-          <div class="pstep-title">Launch, Measure, Improve</div>
-          <p class="pstep-body">Your system goes live with a full handover and documentation. Within the first few weeks you will see enquiry conversion improve, admin workload drop, and rebooking rates increase. Some clinics manage from there. Others stay with us for ongoing optimisation as they grow. Either way, you own the system.</p>
+          <div class="pstep-title">Build, Integrate, Iterate</div>
+          <p class="pstep-body">We build on top of your existing tools, launch the workflow, and refine based on real usage. If it works, we expand. If it doesn’t, we adjust until it does.</p>
         </div>
       </div>
     </div>
@@ -1018,14 +977,14 @@ textarea.ctrl{height:auto;min-height:110px;resize:vertical;line-height:1.65}
             How quickly can we see results?
             <span class="faq-ico">+</span>
           </button>
-          <div class="faq-ans"><div class="faq-ans-inner">Enquiry handling changes immediately on launch. Booking rates typically improve within the first 2 to 4 weeks. Recall and retention gains become measurable within the first month. The speed depends on how much volume your clinic already has and which gaps are being addressed.</div></div>
+          <div class="faq-ans"><div class="faq-ans-inner">Some improvements are immediate (for example, faster responses to enquiries). Others show up over the following weeks as data accumulates. The timeline depends on your current enquiry volume, tools, and which gap we solve first.</div></div>
         </div>
         <div class="faq-item">
           <button class="faq-btn" onclick="toggleFaq(this)">
             Will this feel complicated to manage?
             <span class="faq-ico">+</span>
           </button>
-          <div class="faq-ans"><div class="faq-ans-inner">No. The system is designed to run without your team managing it. Most clinics describe the first few weeks like this: nothing felt different, but the schedule filled faster, patients started following through, and the reception team stopped spending half the day on follow-up calls.</div></div>
+          <div class="faq-ans"><div class="faq-ans-inner">No. The system is designed to run without your team managing it. Clinics often describe the shift like this: fewer things to remember, fewer missed follow-ups, and a smoother experience for patients and reception.</div></div>
         </div>
         <div class="faq-item">
           <button class="faq-btn" onclick="toggleFaq(this)">
@@ -1046,7 +1005,7 @@ textarea.ctrl{height:auto;min-height:110px;resize:vertical;line-height:1.65}
             What clinics benefit most?
             <span class="faq-ico">+</span>
           </button>
-          <div class="faq-ans"><div class="faq-ans-inner">Clinics with steady enquiries but inconsistent bookings, or with patients who book once but do not consistently return. If your clinic is generating interest but losing it somewhere in the journey, a system is the most direct fix. The impact is typically measurable within the first month.</div></div>
+          <div class="faq-ans"><div class="faq-ans-inner">Clinics with steady enquiries but inconsistent bookings, or with patients who book once but do not consistently return. If your clinic is generating interest but losing it somewhere in the journey, a system is often the most direct fix. We focus on one clear gap first so you can see what changes before expanding.</div></div>
         </div>
       </div>
     </div>
@@ -1060,7 +1019,7 @@ textarea.ctrl{height:auto;min-height:110px;resize:vertical;line-height:1.65}
       <div>
         <div class="sec-eyebrow sr" style="margin-bottom:var(--sp3)"><span class="eyebrow">Get in Touch</span></div>
         <h2 class="sec-hed sr d1" style="margin-bottom:var(--sp5)">Know exactly where you stand<i> in 30 minutes.</i></h2>
-        <p class="sec-lead sr d2" style="margin-bottom:var(--sp8)">A free discovery call with Marina. No pitch, no proposal unless you ask for one. You describe your clinic, we identify where patients are slipping through, and we tell you which system would have the most immediate impact. You leave with clarity, whatever you decide next.</p>
+        <p class="sec-lead sr d2" style="margin-bottom:var(--sp8)">A free 30-minute mapping call with Marina. No pitch, no proposal unless you ask for one. We map your current journey, identify the biggest admin and patient-experience gaps, and suggest the first workflow to automate. You leave with clarity, whatever you decide next.</p>
         <div class="cd sr d2">
           <div class="cd-ico">🌏</div>
           <div>
